@@ -648,7 +648,8 @@ of \whizard:
   SM dim 6 operators supported
   \\\hline
   2.3.0 & 07/2016 & NLO: resonance mappings for FKS subtraction; more
-  advanced cascade syntax; GUI ($\alpha$ version); UFO support
+  advanced cascade syntax; \\
+  & & GUI ($\alpha$ version); UFO support 
   ($\alpha$ version); ILC v1.9x-v2.x final validation \\
   2.3.1 & 08/2016 & Complex mass scheme
   \\\hline
@@ -1304,27 +1305,21 @@ A \whizard\ configuration for \lcio\ looks like this:
    configure: --------------------------------------------------------------
    configure: --- LCIO ---
    configure:
-   checking the LCIO version... 2.4.2
+   checking the LCIO version... 2.7.1
    checking for LCEventImpl class in -llcio... yes
    configure: --------------------------------------------------------------    
   \end{verbatim}
 \end{footnotesize}
 
 If \lcio\ is installed in a non-default directory where \whizard\
-would not find it, set the environment variable \ttt{LCIO\_DIR} to
-the correct installation path when configuring \whizard.  Furthermore,
-the environment variable \ttt{CXXFLAGS} allows you to set specific
-\ttt{C/C++} preprocessor flags, e.g. non-standard include paths for
-header files.
-
-{\bf Installation bug of \lcio:} when using \texttt{cmake}
-\texttt{v3}, it is (at least with most known \lcio\ versions) not
-possible to specify the installation path. Instead, files are
-installed into the source directory of \lcio. So the binaries in
-\texttt{bin}, the libraries in \texttt{lib}, and the headers in
-\texttt{include} have to be copied by hand to the desired
-\texttt{prefix}. 
-
+would not find it, set the environment variable \ttt{LCIO} or
+\ttt{LCIO\_DIR} to the correct installation path when configuring
+\whizard.  The first one is the variable exported by the
+\ttt{setup.sh}  script while the second one is analogous to the
+environment variables of other external packages. \ttt{LCIO} takes
+precedence over \ttt{LCIO\_DIR}. Furthermore, the environment variable
+\ttt{CXXFLAGS} allows you to set specific \ttt{C/C++} preprocessor
+flags, e.g. non-standard include paths for header files.
 
 %%%%%
 
@@ -1451,14 +1446,23 @@ The most important options are
   \ttt{LHADPF\_DIR} (variable): The location of the optional \lhapdf\
   package, if non-default.
 \item
+  \ttt{LOOPTOOLS\_DIR} (variable): The location of the optional \ttt{LOOPTOOLS}
+  package, if non-default.
+\item
+  \ttt{OPENLOOPS\_DIR} (variable): The location of the optional \openloops\
+  package, if non-default.
+\item
+  \ttt{GOSAM\_DIR} (variable): The location of the optional \gosam\
+  package, if non-default.
+\item
   \ttt{HOPPET\_DIR} (variable): The location of the optional \hoppet\
   package, if non-default.
 \item
   \ttt{HEPMC\_DIR} (variable): The location of the optional \hepmc\ package, if
   non-default.
 \item
-  \ttt{LCIO\_DIR} (variable): The location of the optional \lcio\
-  package, if non-default.
+  \ttt{LCIO}/\ttt{LCIO\_DIR} (variable): The location of the optional
+  \lcio\ package, if non-default.
 \end{itemize}
 
 Other flags that might help to work around possible problems are the
