@@ -7,6 +7,9 @@ Use svn log to see detailed changes.
 2017-02-28
 	RELEASE: version 2.4.1
 
+2017-01-16
+	LCIO variable takes precedence over LCIO_DIR
+	
 2017-01-13
 	Alternative random number generator
 	   rng_stream (cf. L'Ecuyer et al.)
